[package]
name = "backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["default"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
